--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ChatterConnectSandbox</title>
+  <title>Chatter Connect Sandbox</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
 <body>
+	<p>
+		<%= link_to('Home', '/') %> |
+		<% if !user_signed_in? %>
+			<%= link_to('Login', signin_path) %>
+		<% else %>
+			<%= link_to(session['user_info']['name'], '/social/raw_users_me') %> |
+			<%= link_to('Session Info', '/user/index') %> |
+			<%= link_to('Logout', signout_path) %>
+		<% end %>
+	</p>
 
 <%= yield %>
 
