--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
+	<h1>Chatter Connect Sandbox</h1>
 	<p>
 		<%= link_to('Home', '/') %> |
 		<% if !user_signed_in? %>
