added some metadata fun

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,7 +21,9 @@
 <ul>
 <li><%= link_to('Chatter Intranet', 'https://chatter-intranet.heroku.com/') %> - <%= link_to('GitHub', 'https://github.com/henriquez/chatter-intranet') %></li>
 <li><%= link_to('Chatter Sales', 'http://chatter-sales.heroku.com/') %> - <%= link_to('GitHub', 'https://github.com/henriquez/chatter-sales') %></li>
-<li><%= link_to('Rhatter (GitHub)', 'https://github.com/quintonwall/rhatter') %> (Rails & JQuery Mobile)</li>
+<li><%= link_to('Rhatter (GitHub)', 'https://github.com/quintonwall/rhatter') %> (Rails & JQuery Mobile)</limyQuery = ChatterAdapter.root_url+"chatter/feeds/news/me/feed-items">
 </ul>
 
+<h2>Additional REST API Fun</h2>
+<p><%= link_to('General', '/home/index2')%></p>
 <% end %>
