--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,5 +25,8 @@
 </ul>
 
 <h2>Additional REST API Fun</h2>
-<p><%= link_to('General', '/home/index2')%></p>
+<p><%= link_to('Raw Object List (All)', '/metadata/raw_list_objects') %> |
+	<%= link_to('Object List (Custom)', '/metadata/list_objects') %> |
+		<%= link_to('Object List (All)', '/metadata/list_objects_all') %>
+</p>
 <% end %>
