--- a/app/views/home/index2.html.erb
+++ b/app/views/home/index2.html.erb
@@ -9,8 +9,9 @@
 
 <h2>Raw</h2>
 
-<p><%= link_to('Raw Object List', '/metadata/raw_list_objects') %> |
-	<%= link_to('Object List', '/metadata/list_objects') %>
+<p><%= link_to('Raw Object List (All)', '/metadata/raw_list_objects') %> |
+	<%= link_to('Object List (Custom)', '/metadata/list_objects') %> |
+		<%= link_to('Object List (All)', '/metadata/list_objects_all') %>
 </p>
 
 
