--- a/app/views/social/feed_me.html.erb
+++ b/app/views/social/feed_me.html.erb
@@ -4,8 +4,10 @@
 <% end %>
 
 <% @items["items"].each do |current| %>
-	<p>
-		<img src="<%= current["parent"]["photo"]["smallPhotoUrl"] %>?oauth_token=<%= ENV['sfdc_token'] %>" />
+	<p> 
+		<% if current["parent"]["photo"] %>
+			<img src="<%= current["parent"]["photo"]["smallPhotoUrl"] %>?oauth_token=<%= ENV['sfdc_token'] %>" />
+		<% end %>
 		<%= link_to(current["id"],'/social/raw_feed_item/'+current["id"]) %>,
 		<%= current["body"]["text"] %>
 		<%= current["parent"]["name"] %>
