--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Chatter Connect Sandbox</title>
+  <title>ACME Insurance</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
 <body>
-	<h1>Chatter Connect Sandbox</h1>
 	<p>
 		<%= link_to('Home', '/') %> |
 		<% if !user_signed_in? %>
@@ -20,6 +19,9 @@
 	</p>
 
 <%= yield %>
+
+
+<p>Other indexes: <%= link_to('main', '/home/index') %>, <%= link_to('two', '/home/index2') %>, <%= link_to('main', '/home/index3') %>. </p>
 
 </body>
 </html>
